--- a/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
@@ -730,7 +730,7 @@
             clip_id = clipId
             htmlContainer.innerHTML = `
           <div class="form-group">
-              <input id="slide_text" name="slide_text" value="${selectedText}" readonly required class="form-input">
+              <input id="slide_text" name="slide_text" value="${selectedText}" readonly required hidden class="form-input">
           </div>
           
           <input id="clipId" type="number" hidden name="clipId" value="${clipId}">
