--- a/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
@@ -414,8 +414,8 @@
                                     onclick="editSubclip(this,'{{subclip.get_video_file_name}}','{{subclip.video_clip.id}}','{{subclip.video_clip.category.id}}' )">
                                     {{subclip.subtittle}}</li>
                                 {% endfor %}
-                                <span id="slide_span_{{clip.id}}" data-num="{{clip.get_number_of_subclip}}"
-                                    data-id="{{clip.id}}">{{ clip.remaining }} <div style="width: 3px;"></div></span>
+                                <span id="slide_span_{{clip.id}}" style="width:100%" data-num="{{clip.get_number_of_subclip}}"
+                                    data-id="{{clip.id}}">{{ clip.remaining }}</span>
                             </ul>
                             <input id="remaining_{{clip.id}}" name="remaining_{{clip.id}}" hidden type="text">
                         </div>
