--- a/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
@@ -321,6 +321,8 @@
         line-height: 24.38px;
         text-align: left;
         margin-bottom: -12px;
+        background-color: #ccc;
+        border: 1px solid #ccc;
     }
 
 
