--- a/templates/vlc/frontend/VLSMaker/sceneselection/subclipform.html
+++ b/templates/vlc/frontend/VLSMaker/sceneselection/subclipform.html
@@ -94,7 +94,8 @@
         width: 100%;
         padding: 10px;
         /* margin-bottom: 15px; */
-        border: none;
+        /* border: none; */
+        background-color: #ccc;
         border-radius: 4px;
         font-size: 14px;
         text-transform: capitalize;
