--- a/templates/vlc/frontend/VLSMaker/sceneselection/subclipform.html
+++ b/templates/vlc/frontend/VLSMaker/sceneselection/subclipform.html
@@ -95,10 +95,19 @@
         padding: 10px;
         /* margin-bottom: 15px; */
         /* border: none; */
-        background-color: #ccc;
+        background-color: #f0f0f0;
+        /* Set your background color */
+        border: 1px solid #ccc;
+        /* Optional: border style */
+
         border-radius: 4px;
         font-size: 14px;
         text-transform: capitalize;
+    }
+
+    select::-webkit-dropdown-arrow {
+        background-color: #f0f0f0;
+        /* Color of the dropdown arrow */
     }
 
     .submit-btn {
