upload container fixed

--- a/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
@@ -193,6 +193,13 @@
         letter-spacing: 0.02em;
         text-align: center;
         gap: 14px;
+
+        lement.style {
+            display: block;
+            width: 100%;
+            cursor: pointer;
+            max-width: 200px;
+        }
     }
 
     /* .upload-container:hover {
@@ -412,8 +419,9 @@
                                     onclick="editSubclip(this,'{{subclip.get_video_file_name}}','{{subclip.video_clip.id}}','{{subclip.video_clip.category.id}}' )">
                                     {{subclip.subtittle}}</li>
                                 {% endfor %}
-                                <span id="slide_span_{{clip.id}}" style="width:100%" data-num="{{clip.get_number_of_subclip}}"
-                                    data-id="{{clip.id}}">{{ clip.remaining }}</span>
+                                <span id="slide_span_{{clip.id}}" style="width:100%"
+                                    data-num="{{clip.get_number_of_subclip}}" data-id="{{clip.id}}">{{ clip.remaining
+                                    }}</span>
                             </ul>
                             <input id="remaining_{{clip.id}}" name="remaining_{{clip.id}}" hidden type="text">
                         </div>
