--- a/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
@@ -420,8 +420,7 @@
                                     {{subclip.subtittle}}</li>
                                 {% endfor %}
                                 <span id="slide_span_{{clip.id}}" style="width:100%"
-                                    data-num="{{clip.get_number_of_subclip}}" data-id="{{clip.id}}">{{ clip.remaining
-                                    }}</span>
+                                    data-num="{{clip.get_number_of_subclip}}" data-id="{{clip.id}}">{{ clip.remaining }}</span>
                             </ul>
                             <input id="remaining_{{clip.id}}" name="remaining_{{clip.id}}" hidden type="text">
                         </div>
