--- a/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
@@ -410,7 +410,7 @@
 
                 <div class="grid-item slide-row grid-row" data-slide="1"><span>Subtitle {{ clip.line_number }}</span>
                 </div>
-                <div class="grid-item slide-text" data-slide="1" tabindex="0">
+                <div class="grid-item slide-text" id="grid_{{clip.id}}" data-slide="1" tabindex="0">
                     <div class="wrapper" id="wrapper_{{clip.id}}">
                         <div style="width: 100%;" class="tag-box">
                             <ul style="margin: 0;" id="list-of-tags_{{clip.id}}" class="list-of-tags">
@@ -677,7 +677,8 @@
 
 
         function handleSelection(span, ul, remainingInput, errorMessage, clipId) {
-            span.addEventListener("mouseup", function () {
+            // span.addEventListener("mouseup", function () {
+            document.getElementById(`grid_${clipId}`).addEventListener("mouseup", function () {
                 const selection = window.getSelection();
                 if (selection && selection.toString().trim()) {
                     const selectedText = selection.toString().trim();
