--- a/templates/vlc/frontend/VLSMaker/sceneselection/subclipform.html
+++ b/templates/vlc/frontend/VLSMaker/sceneselection/subclipform.html
@@ -277,6 +277,11 @@
     });
 
     function closeModal() {
+        const errorElements = document.querySelectorAll('[id^="error"]');
+    
+            errorElements.forEach(element => {
+                element.textContent = "";
+            });
         document.getElementById('add-subclip-popup').style.display = 'none';
         const form = document.getElementById('add-subclip-form');
         form.reset();
