--- a/templates/vlc/frontend/VLSMaker/sceneselection/subclipform.html
+++ b/templates/vlc/frontend/VLSMaker/sceneselection/subclipform.html
@@ -38,8 +38,9 @@
     pointer-events: none; /* Prevent interactions when hidden */
     transition: opacity 0.3s ease-in-out; /* Smooth fade-in/out transition */
 }
-
-/* Show the modal when not hidden */
+.hidden{
+    display: none;
+}
 .popup-modal:not(.hidden) {
     display: flex; /* Center the modal */
     opacity: 1; /* Fully visible */
