--- a/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
@@ -30,8 +30,8 @@
         position: relative;
         display: inline-block;
     } */
-/* 
-    .close-btnx {
+
+    /* .close-btnx {
         display: flex;
         justify-content: center;
         align-items: center;
