--- a/templates/vlc/frontend/VLSMaker/sceneselection/subclipform.html
+++ b/templates/vlc/frontend/VLSMaker/sceneselection/subclipform.html
@@ -1,4 +1,4 @@
-<div class="popup-form popup-modal" id="add-subclip-popup">
+<div class="popup-form popup-modal" style="display: none;" id="add-subclip-popup">
     <div class="close-btnx close-btn" onclick="closeModal()">
         <button class="close-popup">
             X
