--- a/templates/vlc/frontend/VLSMaker/sceneselection/subclipform.html
+++ b/templates/vlc/frontend/VLSMaker/sceneselection/subclipform.html
@@ -55,8 +55,6 @@
     width: 90%; /* Take up most of the screen on smaller devices */
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Subtle shadow */
 }
-
-/* The close button */
 .close-btnx {
     position: absolute; /* Relative to the .popup-container */
     top: 10px; /* Distance from the top edge */
@@ -75,7 +73,7 @@
 
 .close-btnx i,
 .close-btnx button {
-    color: #fff; /* Icon/button text color */
+    color: #fff; 
     font-size: 20px; /* Adjust text size */
     border: none; /* Remove default button borders */
     background: none; /* Transparent button background */
@@ -90,7 +88,6 @@
 .close-btnx:active {
     transform: scale(0.95); /* Shrink slightly on click */
 }
-
     .popup-content {
         margin-top: -37px;
     }
