fixed popup x button

--- a/templates/vlc/frontend/VLSMaker/sceneselection/subclipform.html
+++ b/templates/vlc/frontend/VLSMaker/sceneselection/subclipform.html
@@ -73,13 +73,13 @@
     z-index: 1100; /* Ensure it stays above the modal */
 }
 
-.close-btnx i,
-.close-btnx button {
-    color: #fff; /* Icon/button text color */
-    font-size: 20px; /* Adjust text size */
-    border: none; /* Remove default button borders */
-    background: none; /* Transparent button background */
-    outline: none; /* Remove focus outline */
+    .close-btnx i, .close-btnx button {
+    color: #fff;
+    font-size: 20px;
+    background-color: red;
+    border: none;
+    /* background: none; */
+    outline: none;
 }
 
 .close-btnx:hover {
@@ -199,18 +199,18 @@
     }
 
     .close-btn {
-        background-color: transparent;
-        color: white;
-        padding: 10px;
-        font-size: 19px;
-        cursor: pointer;
-        border: none;
-        margin-top: -342px;
-        margin-left: 13px;
-        border-radius: 4px;
-        left: 1140px;
-        position: absolute;
-    }
+    background-color: red;
+    background-color: transparent;
+    color: white;
+    padding: 10px;
+    font-size: 19px;
+    cursor: pointer;
+    border: none;
+    border-radius: 4px;
+    left: 73%;
+    top: 25.5%;
+    position: absolute;
+}
 </style>
 
 
