--- a/templates/vlc/frontend/VLSMaker/sceneselection/subclipform.html
+++ b/templates/vlc/frontend/VLSMaker/sceneselection/subclipform.html
@@ -46,7 +46,7 @@
 
     /* Show the modal when not hidden */
     .popup-modal:not(.hidden) {
-        display: flex;
+        display: none;
         /* Center the modal */
         opacity: 1;
         /* Fully visible */
@@ -228,6 +228,8 @@
     .close-btn {
         background-color: red;
         color: white;
+        width: 18px;
+        height: 17px;
         padding: 10px;
         font-size: 19px;
         cursor: pointer;
