--- a/templates/vlc/frontend/VLSMaker/sceneselection/index.html
+++ b/templates/vlc/frontend/VLSMaker/sceneselection/index.html
@@ -16,6 +16,9 @@
     <link rel="stylesheet" href="{% static 'sceneselection/style.css'%}">
     <script src="{% static 'sceneselection/script.js'%}"></script>
     <style>
+        p{
+            text-transform: capitalize;
+        }
         /* Style for the button */
         .file-button {
             background: #864af9;
