--- a/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
@@ -615,7 +615,7 @@
               
               <div class="form-group">
                   <select id="videoSelect_${clipId}_${num}" onclick="saveInput(this)" name="selected_video" class="form-select">
-                      <option value="" disabled selected>Select a video clip</option>
+                      <option value="" disabled selected>Select A Video Clip</option>
       
                   </select>
                   <p style="color:red; font-size:13px;" id="error-slide"></p>
@@ -623,7 +623,6 @@
               </div>
           </div>
           `;
-            // <input  type="file" onchange="saveInput(this)" id="slide_file" name="slide_file" class="form-input" accept="video/*">
 
             restoreForm();
         }
@@ -784,7 +783,7 @@
               
               <div class="form-group">
                   <select id="videoSelect_${clipId}_${num}" onclick="saveInput(this)" name="selected_video" class="form-select">
-                      <option value="" disabled selected>Select a video clip</option>
+                      <option value="" disabled selected>Select A Video Clip</option>
       
                   </select>
                   <p style="color:red; font-size:13px;" id="error-slide"></p>
