--- a/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
@@ -434,7 +434,7 @@
                             </ul>
                             <input id="remaining_{{clip.id}}" name="remaining_{{clip.id}}" hidden type="text">
                         </div>
-                        <div id="error-message_{{clip.id}}" class="error-message"></div>
+                        <div id="error-message_{{clip.id}}" style="text-transform: capitalize;" class="error-message"></div>
                     </div>
 
                 </div>
