--- a/templates/vlc/frontend/VLSMaker/sceneselection/subclipform.html
+++ b/templates/vlc/frontend/VLSMaker/sceneselection/subclipform.html
@@ -311,6 +311,7 @@
 
     function closeModal() {
         const errorElements = document.querySelectorAll('[id^="error"]');
+        sessionStorage.clear();
 
         errorElements.forEach(element => {
             element.textContent = "";
